Add instance holders, logback support and change all references to GuildMessageReceivedEvent to MessageReceivedEvent

--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ dependencies {
         exclude module: 'opus-java'
     }
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation("ch.qos.logback:logback-classic:1.2.8")
 }
