Make prefix and token env vars

--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation('ch.qos.logback:logback-classic:1.4.6')
+    implementation('io.github.cdimascio:dotenv-java:2.3.2')
 }
