--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ version '1.1.1-SNAPSHOT'
 
 mainClassName = 'me.mateus.milkshake.MilkshakeSimulator'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
@@ -25,7 +25,7 @@ dependencies {
     implementation ('net.dv8tion:JDA:5.0.0-beta.6') {
         exclude module: 'opus-java'
     }
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation('ch.qos.logback:logback-classic:1.4.6')
     implementation('io.github.cdimascio:dotenv-java:2.3.2')
 }
